Fixed Dark Mode issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,7 +45,7 @@
   --weight-semibold: 600;
   --weight-bold: 700;
   --text-color: #000000;
-  --text-invert: #ffffff;
+  --text-invert: #131836;
   --background: #eceef8;
 }
 
